<resources>
    <string name="app_name">ShopbyPragyank</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="enter_your_login_credentials">Please Enter Your Credentials !!!</string>
    <string name="shop_by_pragyank">Shop By Pragyank</string>
    <string name="register">Register</string>
    <string name="login1">Click here to Login -></string>
    <string name="click_here_to_register"><![CDATA[Click Here to Register->]]></string>
    <string name="hello_user">Hello user !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_shopbypragyank">Welcome to ShopByPragyank</string>
    <string name="shop_by_pragyank1">Shop By Pragyank</string>
    <string name="enter_first_name">Enter Full Name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
</resources>