<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="55dp"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_login_credentials"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:textAlignment="center"
        />


    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_first_name"
    android:textColor="@color/black"
    android:layout_margin="15dp"
    android:inputType="textEmailAddress"
    android:id="@+id/name"
    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"
        android:id="@+id/pass" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_confirm_password"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"
        android:id="@+id/cnfpass" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:visibility="gone"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:id="@+id/regbtn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Loginnow"
        android:text="@string/login1"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_by_pragyank"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_margin="107dp"
        android:textColor="#2F07DF" />

</LinearLayout>