<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".Register">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:subtitleTextColor="#123FE1"
        android:contextClickable="true"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_shopbypragyank"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_margin="55dp"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        android:id="@+id/user_det"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="55dp"
        android:textAlignment="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:id="@+id/logout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_by_pragyank"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_margin="107dp"
        android:textColor="#2F07DF" />

</LinearLayout>